--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Mon Nov 20 11:05:10 CET 2017
+#Thu Jan 30 05:09:40 IST 2020
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.3.1-all.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.3.1-bin.zip
+zipStoreBase=GRADLE_USER_HOME
